--- a/client/Login.ejs
+++ b/client/Login.ejs
@@ -157,7 +157,7 @@
                             </table>
                         </div>
                     </div>
-                    <div id="tab4" class="hidden">
+                    <div id="tab4" class="hidden mx-auto w-3/5">
                         <div class="">
                             <div class="">
                                 <h2 class="text-2xl my-4">
@@ -165,9 +165,12 @@
                                 </h2>
                                 <!-- <p class="my-6"> &ensp;Available (ml)</p> -->
                             </div>
-                            <div class="" onclick="showStock()">
-                                <button class="show-btn my-4" id="block-btn" >
+                            <div class="">
+                                <button class="show-btn my-4" id="block-btn" onclick="showblock(1)">
                                     Show Stock
+                                </button>
+                                <button class="show-btn my-4 mx-4" id="block-btn" onclick="showblock(0)">
+                                    Update Stock
                                 </button>
                             </div>
                         </div>
@@ -191,6 +194,51 @@
 
                             </table>
                         </div>
+
+                        <!-- Your HTML form with the "POST" method -->
+                        <div class="hidden" id="update-block">
+                            <form action="/updateblood" method="post">
+                                <div class="my-4">
+                                    <h2>Available quantity:</h2>
+                                    <div class="my-4">
+                                        <% bloodstock.forEach(function(ele){ %>
+                                            <tr class="">
+                                                <td class="">
+                                                    <%=ele.bloodType%>
+                                                </td>
+                                                <td>
+                                                    <%=ele.value%>
+                                                </td>&ensp;&ensp;&ensp;
+                                            </tr>
+                                            <% }) %>
+                                    </div>
+                                </div>
+                                <div class="w-2/5">
+                                    <div class="my-2">
+                                        <label class="block" for="value">Blood Quality (ml):</label>
+                                        <input class="input-border my-1 w-full py-2 px-2" type="number" id="value"
+                                            name="value" required>
+                                    </div>
+                                    <div class="my-2">
+                                        <label for="bloodGrp">Blood Group:</label>
+                                        <select id="bloodGrp" name="bloodGrp" required>
+                                            <option value="A+">A+</option>
+                                            <option value="A-">A-</option>
+                                            <option value="B+">B+</option>
+                                            <option value="B-">B-</option>
+                                            <option value="AB+">AB+</option>
+                                            <option value="AB-">AB-</option>
+                                            <option value="O+">O+</option>
+                                            <option value="O-">O-</option>
+                                        </select>
+                                    </div>
+                                    <div class="my-4">
+                                        <button class="show-btn" type="submit">Update</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+
                     </div>
                 </div>
                 <%}%>
@@ -206,8 +254,9 @@
     const tab4 = document.getElementById("tab4")
 
     const stock = document.getElementById("stock-block")
+    const update = document.getElementById("update-block")
     const blockBTN = document.getElementById("block-btn")
-    
+
 
 
     function swtichPage(tab) {
@@ -239,13 +288,22 @@
         }
     }
 
-    function showStock(){
-        if(stock.style.display=='none'){
-            stock.style.display='block'
-            blockBTN.innerText = "Hide Stock"
-        }else{
-            stock.style.display='none'
-            blockBTN.innerText = "Show Stock"
+    function showblock(x) {
+
+        switch (x) {
+            case 0:
+                stock.style.display = 'none'
+                update.style.display = 'block'
+                break;
+            case 1:
+                stock.style.display = 'block'
+                update.style.display = 'none'
+                // blockBTN.innerText = "Hide Stock"
+                break;
+            default:
+                stock.style.display = 'block'
+                update.style.display = 'none'
+                break;
         }
     }
 
