--- a/client/alert.ejs
+++ b/client/alert.ejs
@@ -12,10 +12,11 @@
                 <i class="fa-solid fa-circle-check my-1 mx-4 "></i>
             </div>
             <div class="text-4xl my-4">
-                Login Successfully
+                <!-- Login Successfully Admin Page -->
+                <%=message%>
             </div>
             <div class="text-xl my-10">
-                <a class="alert-btn " href="/login"><i class="fa-solid fa-arrow-right fa-rotate-180"></i>&ensp;Go to Admin Page</a>
+                <a class="alert-btn " href="/login"><i class="fa-solid fa-arrow-right fa-rotate-180"></i>&ensp;<%=path%></a>
             </div>
         </div>
     </div>
